--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
         <!-- endinject -->
         <!-- endbuild -->
 
-        <link href='//fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700italic,700,900,900italic'
+        <link href='//fonts.useso.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700italic,700,900,900italic'
               rel='stylesheet' type='text/css'>
 
     </head>
