--- a/src/index.html
+++ b/src/index.html
@@ -31,14 +31,13 @@
         your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <body md-theme="{{vm.themes.active.name}}" md-theme-watch ng-controller="IndexController as vm"
+    <body id='zzy-teacher-web' md-theme="{{vm.themes.active.name}}" md-theme-watch ng-controller="IndexController as vm"
           class="{{state.current.bodyClass || ''}}">
 
         <!-- SPLASH SCREEN -->
         <ms-splash-screen id="splash-screen">
             <div class="center">
-                <div class="logo">
-                    <span>F</span>
+                <div class='logo'>
                 </div>
                 <!-- Material Design Spinner -->
                 <div class="spinner-wrapper">
