--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <title>Fuse - Admin Theme</title>
+        <title>My Achievements</title>
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
@@ -31,7 +31,7 @@
         your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <body id='zzy-teacher-web' md-theme="{{vm.themes.active.name}}" md-theme-watch ng-controller="IndexController as vm"
+    <body id='my-achievements-web' md-theme="{{vm.themes.active.name}}" md-theme-watch ng-controller="IndexController as vm"
           class="{{state.current.bodyClass || ''}}">
 
         <!-- SPLASH SCREEN -->
@@ -60,7 +60,7 @@
 
         <div id="main" class="animate-slide-up" ui-view="main" layout="column"></div>
 
-        <ms-theme-options></ms-theme-options>
+        <!-- <ms-theme-options></ms-theme-options> -->
 
         <!-- build:js(src) scripts/vendor.js -->
         <!-- bower:js -->
