--- a/src/index.html
+++ b/src/index.html
@@ -59,6 +59,8 @@
         <!-- / SPLASH SCREEN -->
 
         <div id="main" class="animate-slide-up" ui-view="main" layout="column"></div>
+        <script src="../bower_components/JavaScript-MD5/js/md5.js"></script>
+
 
         <!-- <ms-theme-options></ms-theme-options> -->
 
