test score chart

--- a/src/index.html
+++ b/src/index.html
@@ -78,6 +78,7 @@
         <!-- endinject -->
         <!-- endbuild -->
         <script src="../bower_components/JavaScript-MD5/js/md5.js"></script>
+        <script src="../bower_components/lodash/dist/lodash.js"></script>
 
     </body>
 </html>
